[gd_scene load_steps=2 format=3 uid="uid://bp4uew73bgtli"]

[ext_resource type="Script" uid="uid://dh2el4g4sr0d5" path="res://scripts/Profile.gd" id="1_5ryes"]

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5ryes")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -69.5
offset_right = 256.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Profile"
horizontal_alignment = 1

[node name="Information" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/Information"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/Information/Labels"]
layout_mode = 2
text = "Name"

[node name="Email" type="Label" parent="VBoxContainer/Information/Labels"]
layout_mode = 2
text = "Email"

[node name="Score" type="Label" parent="VBoxContainer/Information/Labels"]
layout_mode = 2
text = "Score"

[node name="Password" type="Label" parent="VBoxContainer/Information/Labels"]
layout_mode = 2
text = "Password"

[node name="Info" type="VBoxContainer" parent="VBoxContainer/Information"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="LineEdit" parent="VBoxContainer/Information/Info"]
layout_mode = 2

[node name="Email" type="LineEdit" parent="VBoxContainer/Information/Info"]
layout_mode = 2

[node name="Score" type="LineEdit" parent="VBoxContainer/Information/Info"]
layout_mode = 2

[node name="Password" type="LineEdit" parent="VBoxContainer/Information/Info"]
layout_mode = 2

[node name="Refresh" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"

[node name="Update" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[connection signal="pressed" from="VBoxContainer/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/Update" to="." method="_on_update_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
